--- a/tentacle-client/pom.xml
+++ b/tentacle-client/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tentacle-client</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>cn.org.hentai</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
