服务器与客户端基本流程完成，待测试

--- a/tentacle-server/src/main/resources/application.properties
+++ b/tentacle-server/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 server.address=0.0.0.0
 server.port=8888
 
+# 远程桌面服务监听端口
+rds.server.port = 1986
+
 # 用户登陆会话有效时长（分钟）
 user.token.expire.minutes=1440
 
