1. 增加简单访问限制 2. 未开始控制前，不捕获鼠标及键盘事件

--- a/tentacle-server/src/main/resources/application.properties
+++ b/tentacle-server/src/main/resources/application.properties
@@ -11,6 +11,9 @@ user.token.expire.minutes=1440
 # 用户accesstoken加密KEY
 user.token.key=VJN42837P0QJHVEY29
 
+# 远程控制验证密码（测试用）
+rds.access.password = 123123abc@@
+
 # 设定ftl文件路径
 spring.freemarker.template-loader-path=classpath:/templates
 
