多会话连接测试

--- a/tentacle-server/src/main/resources/application.properties
+++ b/tentacle-server/src/main/resources/application.properties
@@ -14,6 +14,9 @@ user.token.key=VJN42837P0QJHVEY29
 # 远程控制验证密码（测试用）
 rds.access.password = 123123abc@@
 
+# 客户端通信密钥
+client.key = VUF39U04JCAHREVOAWYF98Y9O5HYOVCXH32Q0962
+
 # 设定ftl文件路径
 spring.freemarker.template-loader-path=classpath:/templates
 
