--- a/tentacle-client/src/main/resources/client.properties
+++ b/tentacle-client/src/main/resources/client.properties
@@ -1,15 +1,12 @@
 
 # 服务器地址
-server.addr = 192.168.1.10
+server.addr = 192.168.3.10
 
 # 服务器端监听端口
 server.port = 1986
-
-# 客户端ID
-client.id = 1
 
 # 客户端通信密钥
 client.key = VUF39U04JCAHREVOAWYF98Y9O5HYOVCXH32Q0962
 
 # 客户端实例名称
-client.name = 家里的电脑
+client.name = \u5BB6\u91CC\u7684\u7535\u8111
