服务器端重构，改用netty完成协议交互

--- a/tentacle-client/src/main/resources/client.properties
+++ b/tentacle-client/src/main/resources/client.properties
@@ -9,4 +9,4 @@ server.port = 1986
 client.key = VUF39U04JCAHREVOAWYF98Y9O5HYOVCXH32Q0962
 
 # 客户端实例名称
-client.name = \u5BB6\u91CC\u7684\u7535\u8111
+client.name = LG-PC
