文件上传以及发送到受控端

--- a/tentacle-server/src/main/resources/application.properties
+++ b/tentacle-server/src/main/resources/application.properties
@@ -23,5 +23,10 @@ spring.freemarker.template-loader-path=classpath:/templates
 # 设定静态文件路径，js,css等
 spring.mvc.static-path-pattern=/static/**
 
+# 最大文件上传大小
+spring.http.multipart.maxFileSize=1024MB
+spring.http.multipart.maxRequestSize=1024MB
+
+
 # sqlite url
 spring.datasource.url=jdbc:sqlite:tentacle.sqlite
