--- a/tentacle-server/src/main/resources/application.properties
+++ b/tentacle-server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=1414
 
 # 远程桌面服务监听端口
 rds.server.port = 1986
+rds.server.udp-port = 1987
 
 # 用户登陆会话有效时长（分钟）
 user.token.expire.minutes=1440
