--- a/tentacle-client/src/main/resources/client.properties
+++ b/tentacle-client/src/main/resources/client.properties
@@ -4,6 +4,7 @@ server.addr = 192.168.3.10
 
 # 服务器端监听端口
 server.port = 1986
+server.udp-port = 1987
 
 # 客户端通信密钥
 client.key = VUF39U04JCAHREVOAWYF98Y9O5HYOVCXH32Q0962
