--- a/tentacle-server/src/main/resources/application.properties
+++ b/tentacle-server/src/main/resources/application.properties
@@ -13,7 +13,7 @@ user.token.expire.minutes=1440
 user.token.key=VJN42837P0QJHVEY29
 
 # 远程控制验证密码（测试用）
-rds.access.password = 123123abc@@
+rds.access.password = 123456
 
 # 客户端通信密钥
 client.key = VUF39U04JCAHREVOAWYF98Y9O5HYOVCXH32Q0962
